--- a/t7home/AndroidManifest.xml
+++ b/t7home/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:name="RoomsListActivity"
             android:screenOrientation="portrait" >
         </activity>
+        <activity
+            android:name="RoomActivity"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
 
 </manifest>
