--- a/t7home/AndroidManifest.xml
+++ b/t7home/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity
             android:name="de.t7soft.android.t7home.MainActivity"
             android:label="@string/app_name"
+            android:noHistory="true"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
