--- a/t7home/AndroidManifest.xml
+++ b/t7home/AndroidManifest.xml
@@ -32,7 +32,12 @@
         </activity>
         <activity
             android:name=".roomactivity.RoomActivity"
+            android:parentActivityName=".roomsactivity.RoomsListActivity"
             android:screenOrientation="portrait" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".roomsactivity.RoomsListActivity" >
+            </meta-data>
         </activity>
     </application>
 
